# aitunnel

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  README.md  UPSTREAM_ISSUES.md  pyproject.toml
.github/workflows/: test.yml
src/aitunnel/: __init__.py  chat.py  chats.py  client.py  download.py  errors.py  fullsize.py  gems.py  history.py  models.py  research.py  retry.py  stream.py  types.py  upload.py
src/aitunnel/_protocol/: __init__.py  auth.py  batch.py  frames.py  request.py  research.py  response.py  upload.py
src/aitunnel/_transport/: __init__.py  client.py  rotate.py
src/aitunnel/server/: __init__.py  __main__.py  app.py  dashboard.html  jobs.py  middleware.py  setup.html
tests/: test_batch.py  test_frames.py  test_request.py  test_research.py  test_server.py
