[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aitunnel"
version = "0.2.0"
description = "Local Gemini proxy on localhost. Reverse-engineered web protocol with auto-rotating cookies, FastAPI server, web dashboard, streaming, file uploads, deep research. No API key needed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "rgcsekaraa" },
]
keywords = ["gemini", "llm", "ai", "proxy", "fastapi", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "curl-cffi>=0.7.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
aitunnel-server = "aitunnel.server.__main__:main"

[project.urls]
Homepage = "https://github.com/rgcsekaraa/aitunnel"
Repository = "https://github.com/rgcsekaraa/aitunnel"
Issues = "https://github.com/rgcsekaraa/aitunnel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aitunnel"]

[tool.hatch.build.targets.wheel.force-include]
"src/aitunnel/server/dashboard.html" = "aitunnel/server/dashboard.html"
"src/aitunnel/server/setup.html" = "aitunnel/server/setup.html"
"src/aitunnel/server/favicon.svg" = "aitunnel/server/favicon.svg"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
# E501: line length - we use 100 above, no need for the older E501 default
# ASYNC230 / ASYNC240: async file I/O. Our occasional disk writes (uploaded
# downloads, .env touches) are fine to do synchronously - converting to
# anyio.path adds a dep without a real benefit at this scale.
ignore = [
    "E501",
    # ASYNC109 wants asyncio.timeout(), but our `timeout=` parameter is a
    # configuration value used inside a poll-loop, not a wrap-this-call timeout.
    "ASYNC109",
    # Async file I/O - disk writes for downloads and .env touches are short
    # enough that anyio.path adds friction without measurable benefit.
    "ASYNC230",
    "ASYNC240",
]
